--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ div.row-widget.stRadio>div[role="radiogroup"]>label[data-baseweb="radio"] {
   margin: 4px;
 }
 
-
 .html-content {
   background-color: #ffffff;
   padding: 20px;
@@ -31,4 +30,22 @@ div.row-widget.stRadio>div[role="radiogroup"]>label[data-baseweb="radio"] {
 
 .html-content a {
   color: #2E86C1;
+}
+
+.column {
+  padding: 20px;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.subheader {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.divider {
+  border-top: 1px solid #ccc;
+  margin: 20px 0;
 }
